# tausch

./: CMakeLists.txt  Doxyfile  Doxyfile.css  LICENSE  Makefile  README  TauschInterface.f90  ctausch.c  ctausch.cpp  ctausch.h  examplecode.cpp  kernel.cl  kernels.cl  kernels3d.cl  main.cpp  sample.cpp  sample.h  tausch.cpp  tausch.h  tausch_c2c.h  tausch_c2g.h  tausch_g2c.h  tausch_g2g.h  tauschdefs.h  tauschinterface.mod
2d/: _ctausch2d.cpp  _ctausch2d.h  _tausch2d.cpp  _tausch2d.h
csamplecode/: CMakeLists.txt  main.c  paramstruct.h  samplecpu.h  samplegpu.h
doxygen/: Doxyfile  samplecode.cpp
driver/: CMakeLists.txt  main.cpp  tauschdriver.cpp  tauschdriver.h
modules/: ctausch.cpp  ctausch.h  ctausch2d.cpp  ctausch2d.h  ctausch3d.cpp  ctausch3d.h  ctauschdouble.cpp  ctauschdouble.h  ctauschfloat.cpp  ctauschint.cpp  ctauschint.h  ctauschunsignedint.cpp  ctauschunsignedint.h  tausch.h  tausch1d.cpp  tausch1d.h  tausch2d.cpp  tausch2d.h  tausch3d.cpp  tausch3d.h  tausch_cwc.h  tausch_opencl.h  tauschdefs.h  test  test.cpp
modules/ctausch/: ctauschbool.cpp  ctauschbool.h  ctauschdouble.cpp  ctauschdouble.h  ctauschfloat.cpp  ctauschfloat.h  ctauschint.cpp  ctauschint.h  ctauschunsignedint.cpp  ctauschunsignedint.h
modules/ctausch_backup/: ctauschdouble.cpp  ctauschdouble.h  ctauschfloat.cpp  ctauschunsignedint.h
oldtausch/: CMakeLists.txt
oldtausch/doxygen/: codesnippet.cpp  samplecode.cpp
oldtausch/driver/: CMakeLists.txt  tauschdriver.cpp  tauschdriver.h
oldtausch/modules/: tausch.h  tausch1d.cpp  tausch1d.h  tausch2d.cpp  tausch2d.h  tausch3d.cpp  tausch3d.h  tausch_opencl_yes.h  tauschdefs.h
oldtausch/modules/ctausch/: ctauschint.cpp  ctauschunsignedint.h
oldtausch/modules/ctausch_backup/: ctauschfloat.h  ctauschint.h  ctauschunsignedint.cpp
oldtausch/performancemodel/: performancemodel.ipynb
oldtausch/samplecode1d/: sample.cpp  sample.h
oldtausch/samplecode2d/: CMakeLists.txt  sample.h
oldtausch/samplecode3d/: CMakeLists.txt  main.cpp  sample.cpp
performance/: performancemodel.ipynb
performancemodel/: performancemodel.ipynb
samplecode/: CMakeLists.txt  main.cpp  sample.cpp  sample.h
samplecode1d/: CMakeLists.txt  main.cpp  sample.cpp  sample.h
samplecode2d/: CMakeLists.txt  main.cpp  sample.cpp  sample.h
samplecode3d/: CMakeLists.txt  main.cpp  sample.cpp  sample.h
summary/: summary.tex
testing/: c2c.cpp  c2g.cpp  cpu2cpu.cpp  cpu2cuda.cpp  cpu2ocl.cpp  cuda2cpu.cpp  cuda2cuda.cpp  cuda2ocl.cpp  empty.cpp  extract.cpp  g2c.cpp  g2g.cpp  main.cpp  nb.cpp  ocl.h  ocl2cpu.cpp  ocl2cuda.cpp  ocl2ocl.cpp  packunpack.cpp  randomaccess.cpp  rma.cpp
testing/cpu2cpu/: cpu2cpu.cpp  cpu2cpu_derived.cpp  cpu2cpu_randomaccess.cpp  derived.cpp  empty.cpp  packunpack.cpp  randomaccess.cpp
testing/cpu2cuda/: derived.cpp  empty.cpp  main.cpp  packunpack.cpp  randomaccess.cpp
testing/cpu2ocl/: derived.cpp  empty.cpp  main.cpp  ocl.h  packunpack.cpp  randomaccess.cpp
testing/ctausch/: cpu.c  main.c  opencl.c
testing/cuda2cpu/: empty.cpp  packunpack.cpp  randomaccess.cpp
testing/cuda2cuda/: derived.cpp  empty.cpp  ondevice.cpp  packunpack.cpp  randomaccess.cpp
testing/cuda2ocl/: derived.cpp  empty.cpp  packunpack.cpp  randomaccess.cpp
testing/cudaaware/: cpu2cuda.cpp  cuda2cpu.cpp  cuda2cuda.cpp  main.cpp
testing/hip2hip/: empty.cpp  packunpack.cpp  randomaccess.cpp
testing/ocl2cpu/: derived.cpp  empty.cpp  ocl.h  packunpack.cpp  randomaccess.cpp
testing/ocl2cuda/: empty.cpp  ocl.h  packunpack.cpp  randomaccess.cpp
testing/ocl2ocl/: empty.cpp  packunpack.cpp  randomaccess.cpp
